Vista previa del editor

--- a/Admin/editor/plugins/preview/preview.html
+++ b/Admin/editor/plugins/preview/preview.html
@@ -1,3 +1,35 @@
+<html>
+	<head>
+		<title>Vista Previa</title>
+		<link rel="shortcut icon" href="images/es.png">
+		<style type="text/css">
+		body{
+			margin-top: 0 !important;
+			width: 100%;
+			font-family: 'Open Sans', sans-serif;
+		}
+		.header{
+			background-color: #fff;
+			color: #fff;
+			font-size: 0px;
+			padding-top: 5px;
+			padding-bottom: 5px;
+			text-align: center;
+			margin-left: -20px;
+		}
+		html:hover .header{
+			font-size: 20px;
+			background-color: #C2D199;
+			background-color: rgba(133, 163, 51, .5)
+		}
+		
+		</style>
+	</head>
+<body>
+<div class="header">
+	Vista Previa
+</div>
+
 <script>
 
 var doc = document;
@@ -8,3 +40,6 @@ doc.close();
 delete window.opener._cke_htmlToLoad;
 
 </script>
+
+</body>
+</html>
