--- a/Admin/editor/plugins/preview/preview.html
+++ b/Admin/editor/plugins/preview/preview.html
@@ -16,11 +16,22 @@
 			padding-bottom: 5px;
 			text-align: center;
 			margin-left: -20px;
+				-o-transition: all .7s ease-out;
+				-ms-transition: all .7s ease-out;
+				-moz-transition: all .7s ease-out;
+				-webkit-transition: all .7s ease-out;
+			transition: all .7s ease-out;
 		}
 		html:hover .header{
 			font-size: 20px;
 			background-color: #C2D199;
-			background-color: rgba(133, 163, 51, .5)
+			background-color: rgba(133, 163, 51, .5);
+
+				-o-transition: all 1.5s ease-out;
+				-ms-transition: all 1.5s ease-out;
+				-moz-transition: all 1.5s ease-out;
+				-webkit-transition: all 1.5s ease-out;
+			transition: all 1.5s ease-out;
 		}
 		
 		</style>
